--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>fr.home.mikedev</groupId>
-  <artifactId>2024-advent-code</artifactId>
+  <artifactId>advent-code</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>2024 - Advent of Code</name>
+  <name>Advent of Code</name>
   <dependencies>
       <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
     <dependency>
